join,merge and concat

--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -2580,7 +2580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2598,7 +2598,8 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "# Load Titanic dataset\n",
     "df = sns.load_dataset('titanic')\n",
     "\n",
@@ -2780,6 +2781,275 @@
     "pd.merge(df1, df2, on='common_column', how='left')   # Left join\n",
     "# Append\n",
     "df1.append(df2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survived</th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>embarked</th>\n",
+       "      <th>class</th>\n",
+       "      <th>who</th>\n",
+       "      <th>adult_male</th>\n",
+       "      <th>deck</th>\n",
+       "      <th>embark_town</th>\n",
+       "      <th>alive</th>\n",
+       "      <th>alone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C</td>\n",
+       "      <td>First</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>False</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>S</td>\n",
+       "      <td>First</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>False</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   survived  pclass     sex   age  sibsp  parch     fare embarked  class  \\\n",
+       "0         0       3    male  22.0      1      0   7.2500        S  Third   \n",
+       "1         1       1  female  38.0      1      0  71.2833        C  First   \n",
+       "2         1       3  female  26.0      0      0   7.9250        S  Third   \n",
+       "3         1       1  female  35.0      1      0  53.1000        S  First   \n",
+       "4         0       3    male  35.0      0      0   8.0500        S  Third   \n",
+       "\n",
+       "     who  adult_male deck  embark_town alive  alone  \n",
+       "0    man        True  NaN  Southampton    no  False  \n",
+       "1  woman       False    C    Cherbourg   yes  False  \n",
+       "2  woman       False  NaN  Southampton   yes   True  \n",
+       "3  woman       False    C  Southampton   yes  False  \n",
+       "4    man        True  NaN  Southampton    no   True  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    sex   age  class  fare  survived    who  adult_male alive\n",
+      "0  male  22.0  Third  7.25         0    man        True    no\n",
+      "1  male  22.0  Third  7.25         0    man        True    no\n",
+      "2  male  22.0  Third  7.25         0    man        True    no\n",
+      "3  male  22.0  Third  7.25         0    man        True    no\n",
+      "4  male  22.0  Third  7.25         0  child       False    no\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Load Titanic dataset (assuming different tables)\n",
+    "df1 = df[[\"sex\", \"age\", \"class\", \"fare\", \"survived\"]]\n",
+    "df2 = df[[\"sex\", \"who\", \"adult_male\", \"alive\"]]\n",
+    "\n",
+    "# Merge on common column (PassengerId)\n",
+    "merged_df = pd.merge(df1, df2, on=\"sex\", how=\"inner\")  # Inner join\n",
+    "print(merged_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concatinating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(800, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_top = df1.head(400)  # First 400 rows\n",
+    "df_bottom = df1.tail(400)  # Last 400 rows\n",
+    "\n",
+    "# Vertical stacking (like UNION in SQL)\n",
+    "concatenated_df = pd.concat([df_top, df_bottom], ignore_index=True)\n",
+    "print(concatenated_df.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       age  class  fare  survived    who  adult_male alive\n",
+      "sex                                                       \n",
+      "male  22.0  Third  7.25         0    man        True    no\n",
+      "male  22.0  Third  7.25         0    man        True    no\n",
+      "male  22.0  Third  7.25         0    man        True    no\n",
+      "male  22.0  Third  7.25         0    man        True    no\n",
+      "male  22.0  Third  7.25         0  child       False    no\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1.set_index(\"sex\", inplace=True)\n",
+    "df2.set_index(\"sex\", inplace=True)\n",
+    "\n",
+    "joined_df = df1.join(df2, how=\"inner\")  # Inner join on index\n",
+    "print(joined_df.head())\n"
    ]
   },
   {
