--- a/notebooks/ML_with_pyspark.ipynb
+++ b/notebooks/ML_with_pyspark.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,26 +164,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Row(PassengerId=1, Survived=0, Pclass=3, Name='Braund, Mr. Owen Harris', Sex='male', Age=22.0, SibSp=1, Parch=0, Ticket='A/5 21171', Fare=7.25, Cabin=None, Embarked='S', Age_imputed=22.0, Fare_imputed=7.25),\n",
-       " Row(PassengerId=2, Survived=1, Pclass=1, Name='Cumings, Mrs. John Bradley (Florence Briggs Thayer)', Sex='female', Age=38.0, SibSp=1, Parch=0, Ticket='PC 17599', Fare=71.2833, Cabin='C85', Embarked='C', Age_imputed=38.0, Fare_imputed=71.2833),\n",
-       " Row(PassengerId=3, Survived=1, Pclass=3, Name='Heikkinen, Miss. Laina', Sex='female', Age=26.0, SibSp=0, Parch=0, Ticket='STON/O2. 3101282', Fare=7.925, Cabin=None, Embarked='S', Age_imputed=26.0, Fare_imputed=7.925),\n",
-       " Row(PassengerId=4, Survived=1, Pclass=1, Name='Futrelle, Mrs. Jacques Heath (Lily May Peel)', Sex='female', Age=35.0, SibSp=1, Parch=0, Ticket='113803', Fare=53.1, Cabin='C123', Embarked='S', Age_imputed=35.0, Fare_imputed=53.1),\n",
-       " Row(PassengerId=5, Survived=0, Pclass=3, Name='Allen, Mr. William Henry', Sex='male', Age=35.0, SibSp=0, Parch=0, Ticket='373450', Fare=8.05, Cabin=None, Embarked='S', Age_imputed=35.0, Fare_imputed=8.05)]"
+       "[('PassengerId', 'int'),\n",
+       " ('Survived', 'int'),\n",
+       " ('Pclass', 'int'),\n",
+       " ('Name', 'string'),\n",
+       " ('Sex', 'string'),\n",
+       " ('Age', 'double'),\n",
+       " ('SibSp', 'int'),\n",
+       " ('Parch', 'int'),\n",
+       " ('Ticket', 'string'),\n",
+       " ('Fare', 'double'),\n",
+       " ('Cabin', 'string'),\n",
+       " ('Embarked', 'string'),\n",
+       " ('Age_imputed', 'double'),\n",
+       " ('Fare_imputed', 'double')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(5)"
+    "df.dtypes"
    ]
   },
   {
@@ -217,6 +226,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "VectorAssembler_92edc17b5dc5\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "StringIndexer_b53cd3abb288\n"
      ]
     }
@@ -228,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +271,26 @@
    "source": [
     "from pyspark.sql.functions import col, sum\n",
     "\n",
-    "df.select([sum(col(c).isNull().cast(\"int\")).alias(c) for c in df.columns]).show()\n"
+    "df.select([sum(col(c).isNull().cast(\"int\")).alias(c) for c in df.columns]).show()\n",
+    "# missing_values = df.select([sum(col(column).isNull().cast(\"int\")).alias(column) for column in df.columns])\n",
+    "# missing_values.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked', 'Age_imputed', 'Fare_imputed']\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.assembled = assembler.transform(df)"
    ]
   },
   {
