--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -3662,6 +3662,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Compute the average total income per weekday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "weekday\n",
+       "0    18.964223\n",
+       "1    18.888848\n",
+       "2    19.132288\n",
+       "3    18.901735\n",
+       "4    18.658484\n",
+       "5    17.496912\n",
+       "6    17.766313\n",
+       "Name: total, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby([df['weekday']])['total'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### How to Manipulate Textual Data\n",
     "- Pandas provides string methods for text manipulation."
    ]
